[project]
name = "Vehicle_Speed_Estimator"
version = "1.0.0"
description = "It estimates the speed of vehicles in a camera feed by sovling key challenge of perspective distortion. "
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"


[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
run-pipeline = "application:main"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

